cabal-version:      2.4
name:               reme
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
author:             Kyohei Uto

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable reme
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.1.0,
        req ^>=3.9.0,
        aeson ^>=1.5.6.0,
        dhall ^>=1.38.1,
        bytestring ^>=0.11.1.0,
        utf8-string ^>=1.0.2,
        text ^>=1.2.4.1
    hs-source-dirs:   app
    default-language: Haskell2010
